--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<title>Curriculum Vitae</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="cv.css">
 	</head>
 	<body>
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
+		<div class= "info">
+		<p><strong>Aïni HANAFI</strong><br/>
+		25 Rue Etienne Dolet<br/>
+		63000 Clermont-Ferrand<br/>
+		+33 07 83 11 76 55<br/>
+		aini.hanafi@gmail.com</p>
+		</div>
+	
+			<div class= "section">
+				<h1>FORMATION</h1>
+				<div class= "sec-gauche">
+					<p><strong>2016/2017</strong></p>
+					<p><strong>2014/2016</strong></p>
+				</div>
+				<div class= "sec-droite">   
+					<p>Master Compétences Complémentaires en Informatique, Université Lyon 1<a href="http://master-info.univ-lyon1.fr/CCI/"> liens</a></p>
+					<p>Master Nutrition Santé Aliment spécialité Sciences des aliments. Université Clermont-Ferrand 2<a href="http://www.univ-bpclermont.fr/formation/formation/UBP-PROG20294.html"> liens</a></p>
+				</div>	   
+			</div>
+			<div class= "section">
+				<h1>EXPERIENCES PROFESSIONNELLES</h1>
+				<div class= "sec-gauche">
+					<p>2016<span class="duree"><br/>(6 mois)</span></p>
+					<p>2015<span class="duree"><br/>(2 mois)</span></p>
+				</div>
+				<div class= "sec-droite">
+					<p><span class="titre">Ingénieur de Recherche, Laboratoire de génie chimique et biochimique. Institut pascal Clermont-Ferrand<a href="http://www.ip.univ-bpclermont.fr/index.php/fr/"> liens</a></span><br/>
+							Mesure, Modélisation et prédiction des propriétés physico-chimiques des matrices fromagères à l’aide d’un logiciel thermodynamique.</p>
+					<p><span class="titre">Stagiaire, Laboratoire de génie chimique et biochimique. Institut pascal Clermont-Ferrand</span><br/>
+							Mesure et représentation des propriétés physico-chimique de matrices fromagères en présence ou non de sels, d'acides organique ou des deux simultanément.</p>
+				</div>
+					       
+			</div>
+			<div class= "section">
+				<h1>LANGUES</h1>
+				<div class= "sec-gauche">
+					<p>Français</p>
+					<p>Arabe</p>
+				</div>
+				<div class= "sec-droite">
+					<p>Bilingue</p>
+					<p>Bilingue</p>
+				</div>
+					       
+			</div>
 	</body>
 </html>
