--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 	<title>Curriculum Vitae</title>
 	<meta charset="utf-8">
+	
 	<link rel="stylesheet" href="cv.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div class= "info">
@@ -16,6 +18,7 @@
 	
 			<div class= "section">
 				<h1>FORMATION</h1>
+				<div id="FORMATION">
 				<div class= "sec-gauche">
 					<p><strong>2016/2017</strong></p>
 					<p><strong>2014/2016</strong></p>
@@ -25,6 +28,8 @@
 					<p>Master Nutrition Santé Aliment spécialité Sciences des aliments. Université Clermont-Ferrand 2<a href="http://www.univ-bpclermont.fr/formation/formation/UBP-PROG20294.html"> liens</a></p>
 				</div>	   
 			</div>
+			</div>
+			
 			<div class= "section">
 				<h1>EXPERIENCES PROFESSIONNELLES</h1>
 				<div class= "sec-gauche">
