--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 	
 			<div class= "section">
-				<h1>FORMATION</h1>
+				<h1>FORMATION <button style="font-size: 50%;">cacher</button> </h1>
 				<div id="FORMATION">
 				<div class= "sec-gauche">
 					<p><strong>2016/2017</strong></p>
