--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 	
 	<link rel="stylesheet" href="cv.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script language="javascript" type="text/javascript">
-  	function afficher(id) {
-  	$(id).toggle()
- 	 }
-  </script>
+	<script src="cv.js"></script>
+	
 	</head>
 	<body>
 		<div class= "info">
@@ -22,7 +19,7 @@
 		</div>
 	
 			<div class= "section">
-				<h1>FORMATION <button style="font-size: 50%;" onclick="afficher('#FOR');">cacher</button> </h1>
+				<h1>FORMATION <button style="font-size: 50%;" onclick="afficher('#FORMATION');">cacher</button> </h1>
 				<div id="FORMATION">
 				<div class= "sec-gauche">
 					<p><strong>2016/2017</strong></p>
