--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@ if (form3.choix[2].checked) { alert("Vous avez choisi la proposition " + form3.c
 <BODY>
 Entrez votre choix :
 <FORM NAME="form3">
-<INPUT TYPE="radio" NAME="choix" VALUE="1">Choix numéro 1<BR>
-<INPUT TYPE="radio" NAME="choix" VALUE="2">Choix numéro 2<BR>
-<INPUT TYPE="radio" NAME="choix" VALUE="3">Choix numéro 3<BR>
-<INPUT TYPE="button"NAME="but" VALUE="Quel et votre choix ?" onClick="choixprop(form3)">
+
+ <input type="text" name="nom" />
 </FORM> 
 
 	</body>
