--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		
+	<head>	
 	<title>Curriculum Vitae</title>
 	<meta charset="utf-8">
-	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="cv.css">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="cv.js"></script>
 	
@@ -22,7 +23,7 @@
 					<p>Permis B</p>
 					</div>
 				<div class= "photo">
-				<img src="photo cv.png" alt="F/XML"/>
+				<img src="F:/XML/photo cv.png" alt="photo cv"/>
 				</div>
 			</div>
 			<div class= "section">
@@ -46,7 +47,8 @@
 			</div>
 			
 			<div class= "section">
-				<h2>EXPERIENCES PROFESSIONNELLES</h2>
+				<h2>EXPERIENCES PROFESSIONNELLES<button style="font-size: 50%;" onclick="afficher('#EXPERIENCES');">cacher</button></h2>
+				<div id ="EXPERIENCES">
 				<div class= "sec-gauche">
 					<div id ="exp-gauche">
 					<p>2016<span class="duree"><br/>(6 mois)</span></p>
@@ -90,10 +92,11 @@
 					</p>
 					<p><span class="titre">Technicienne contrôle de qualité stagiaire, Danone Djurdjura Algérie SPA</span><br/>Analyses physico-chimiques et microbiologiques des produits laitiers de l'entreprise </p>
 				</div>
-					       
+				</div>	       
 			</div>
 			<div class= "section">
-				<h2>COMPETENCES</h2>
+				<h2>COMPETENCES<button style="font-size: 50%;" onclick="afficher('#COMPETENCES');">cacher</button></h2>
+				<div id ="COMPETENCES">
 							<p>Connaissance des processus industriels agroalimentaires, biochimie et microbiologie </p> 
 							<p>Connaissance de HACCP, des principes fondamentaux des systèmes de Management de la Qualité et de la réglementation liée à la sécurité sanitaire </p> 
 							<p>Connaissances en gestion entreprise, finance/comptabilité</p>
@@ -110,20 +113,45 @@
 							<li>Outils Microsoft Office</li>
 						</ul> 
 					</p>
+				</div>
 			</div>
 			<div class= "section">
-				<h2>LANGUES</h2>
-				<div class= "sec-gauche">
-					<p>Français</p>
-					<p>Arabe</p>
-					<p>Anglais</p>
-				</div>
-				<div class= "sec-droite">
-					<p>Bilingue</p>
-					<p>Bilingue</p>
-					<p>Technique</p>
-				</div>
-					       
+				<h2>LANGUES<button style="font-size: 50%;" onclick="afficher('#LANGUES');">cacher</button></h2>
+				<div id ="LANGUES">
+					<div class= "sec-gauche">
+						<p>Français</p>
+						<p>Arabe</p>
+						<p>Anglais</p>
+					</div>
+					<div class= "sec-droite">
+						<p>Bilingue</p>
+						<p>Bilingue</p>
+						<p>Technique</p>
+					</div>
+				</div>	       
 			</div>
+			<script src="js/bootstrap.min.js"></script>
+		<FORM METHOD="post" ACTION="mailto:votre_adresse_Email">
+			<div>
+				<label for="nom">Nom : </label>
+				<input type="text" id="nom" />
+			</div>
+			<div>
+				<label for="courriel">E-mail:</label>
+				<input type="email" id="Email" />
+			</div>
+			<div>
+				<label for="Telephone">Téléphone :</label>
+				<input type="number" id="Telephone" />
+			</div>
+			<div>
+				<label for="message">Message :</label>
+				<textarea id="message"></textarea>
+			</div>
+			<div class="button">
+				<button type="submit">Submit</button>
+			</div>
+			
+		</FORM>
 	</body>
 </html>
