--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 					<p><strong>2016/2017</strong></p>
 					<p><strong>2014/2016</strong></p>
 					<p><strong>2007/2010</strong></p>
+					<div id="forma1-gauche">
 					<p><strong>2004/2007</strong></p>
+					</div>
 					</div>
 				</div>
 				<div class= "sec-droite">   
@@ -119,9 +121,11 @@
 				<h2>LANGUES<button style="font-size: 50%;" onclick="afficher('#LANGUES');">cacher</button></h2>
 				<div id ="LANGUES">
 					<div class= "sec-gauche">
+					<div id ="lang-gauche">
 						<p>Français</p>
 						<p>Arabe</p>
 						<p>Anglais</p>
+					</div>
 					</div>
 					<div class= "sec-droite">
 						<p>Bilingue</p>
